--- a/kafka_producer.ipynb
+++ b/kafka_producer.ipynb
@@ -2,14 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +10,30 @@
      "output_type": "stream",
      "text": [
       "Publishing records..\n",
-      "Message published successfully. Data: {\"userId\": \"j11288090\", \"visitorId\": \"jas8v98171\", \"type\": \"Event\", \"metadata\": {\"messageId\": \"123sfdafas-32487239857dsh98234\", \"sentAt\": 1534382478, \"timestamp\": 1534382478, \"receivedAt\": 0, \"apiKey\": \"apikey1\", \"spaceId\": \"space1\", \"version\": \"v1\"}, \"event\": \"Played Movie\", \"eventData\": {\"MovieID\": \"MIM4ddd4\"}}\n"
+      "Message published successfully. Data: {\"userId\": \"j11223344\", \"visitorId\": \"jas8v98171\", \"type\": \"Event\", \"metadata\": {\"messageId\": \"123sfdafas-32487239857dsh98234\", \"sentAt\": 1631706818, \"timestamp\": 1631706818, \"receivedAt\": 0, \"apiKey\": \"apikey1\", \"spaceId\": \"space1\", \"version\": \"v1\"}, \"event\": \"Played Movie\", \"eventData\": {\"MovieID\": \"MIM4ddd4\"}}\n",
+      "Publishing records..\n",
+      "Message published successfully. Data: {\"userId\": \"j87654321\", \"visitorId\": \"jas8v98171\", \"type\": \"Event\", \"metadata\": {\"messageId\": \"123sfdafas-32487239857dsh98234\", \"sentAt\": 1631706823, \"timestamp\": 1631706823, \"receivedAt\": 0, \"apiKey\": \"apikey1\", \"spaceId\": \"space1\", \"version\": \"v1\"}, \"event\": \"Played Movie\", \"eventData\": {\"MovieID\": \"MIM4ddd4\"}}\n",
+      "Publishing records..\n",
+      "Message published successfully. Data: {\"userId\": \"j12345678\", \"visitorId\": \"jas8v98171\", \"type\": \"Event\", \"metadata\": {\"messageId\": \"123sfdafas-32487239857dsh98234\", \"sentAt\": 1631706828, \"timestamp\": 1631706828, \"receivedAt\": 0, \"apiKey\": \"apikey1\", \"spaceId\": \"space1\", \"version\": \"v1\"}, \"event\": \"Played Movie\", \"eventData\": {\"MovieID\": \"MIM4ddd4\"}}\n",
+      "Publishing records..\n",
+      "Message published successfully. Data: {\"userId\": \"j11223344\", \"visitorId\": \"jas8v98171\", \"type\": \"Event\", \"metadata\": {\"messageId\": \"123sfdafas-32487239857dsh98234\", \"sentAt\": 1631706833, \"timestamp\": 1631706833, \"receivedAt\": 0, \"apiKey\": \"apikey1\", \"spaceId\": \"space1\", \"version\": \"v1\"}, \"event\": \"Played Movie\", \"eventData\": {\"MovieID\": \"MIM4ddd4\"}}\n",
+      "Publishing records..\n",
+      "Message published successfully. Data: {\"userId\": \"j87654321\", \"visitorId\": \"jas8v98171\", \"type\": \"Event\", \"metadata\": {\"messageId\": \"123sfdafas-32487239857dsh98234\", \"sentAt\": 1631706838, \"timestamp\": 1631706838, \"receivedAt\": 0, \"apiKey\": \"apikey1\", \"spaceId\": \"space1\", \"version\": \"v1\"}, \"event\": \"Played Movie\", \"eventData\": {\"MovieID\": \"MIM4ddd4\"}}\n",
+      "Publishing records..\n",
+      "Message published successfully. Data: {\"userId\": \"j44332211\", \"visitorId\": \"jas8v98171\", \"type\": \"Event\", \"metadata\": {\"messageId\": \"123sfdafas-32487239857dsh98234\", \"sentAt\": 1631706843, \"timestamp\": 1631706843, \"receivedAt\": 0, \"apiKey\": \"apikey1\", \"spaceId\": \"space1\", \"version\": \"v1\"}, \"event\": \"Played Movie\", \"eventData\": {\"MovieID\": \"MIM4ddd4\"}}\n",
+      "Publishing records..\n",
+      "Message published successfully. Data: {\"userId\": \"j11223344\", \"visitorId\": \"jas8v98171\", \"type\": \"Event\", \"metadata\": {\"messageId\": \"123sfdafas-32487239857dsh98234\", \"sentAt\": 1631706848, \"timestamp\": 1631706848, \"receivedAt\": 0, \"apiKey\": \"apikey1\", \"spaceId\": \"space1\", \"version\": \"v1\"}, \"event\": \"Played Movie\", \"eventData\": {\"MovieID\": \"MIM4ddd4\"}}\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-9f78d28358db>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdumps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpayload\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[0mpublish_message\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mproducer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtopic\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'input_payload'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m         \u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -27,6 +43,7 @@
     "import json\n",
     "from kafka import KafkaProducer\n",
     "import random\n",
+    "from data import get_payload\n",
     "\n",
     "# publish message to broker\n",
     "def publish_message(producer_instance, topic_name, key, value):\n",
@@ -54,28 +71,13 @@
     "    \n",
     "if __name__ == '__main__':\n",
     "    topic = 'input_topic'\n",
-    "    data_payload = {\n",
-    "        \"userId\":\"j11288090\",\n",
-    "        \"visitorId\":\"jas8v98171\",\n",
-    "        \"type\":\"Event\",\n",
-    "        \"metadata\":{\n",
-    "        \"messageId\":\"123sfdafas-32487239857dsh98234\",\n",
-    "        \"sentAt\":1534382478,\n",
-    "        \"timestamp\":1534382478,\n",
-    "        \"receivedAt\":0,\n",
-    "        \"apiKey\":\"apikey1\",\n",
-    "        \"spaceId\":\"space1\",\n",
-    "        \"version\":\"v1\"\n",
-    "        },\n",
-    "        \"event\":\"Played Movie\",\n",
-    "        \"eventData\":{\n",
-    "        \"MovieID\":\"MIM4ddd4\"\n",
-    "        }\n",
-    "    }\n",
-    "    print('Publishing records..')\n",
-    "    producer = connect_kafka_producer()\n",
-    "    data = json.dumps(data_payload)\n",
-    "    publish_message(producer, topic, 'input_payload', data)"
+    "    while True:\n",
+    "        payload = get_payload()\n",
+    "        print('Publishing records..')\n",
+    "        producer = connect_kafka_producer()\n",
+    "        data = json.dumps(payload)\n",
+    "        publish_message(producer, topic, 'input_payload', data)\n",
+    "        sleep(5)"
    ]
   },
   {
